Started working on model

--- a/NLPSubmission.ipynb
+++ b/NLPSubmission.ipynb
@@ -2,18 +2,102 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 78,
    "id": "9d59dcf4-0dc4-477c-a4d6-afdc29406837",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-11-04 19:45:16.165476: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-11-04 19:45:17.229281: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>keyword</th>\n",
+       "      <th>location</th>\n",
+       "      <th>text</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>48</td>\n",
+       "      <td>ablaze</td>\n",
+       "      <td>Birmingham</td>\n",
+       "      <td>@bbcmtd Wholesale Markets ablaze http://t.co/l...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>49</td>\n",
+       "      <td>ablaze</td>\n",
+       "      <td>Est. September 2012 - Bristol</td>\n",
+       "      <td>We always try to bring the heavy. #metal #RT h...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>50</td>\n",
+       "      <td>ablaze</td>\n",
+       "      <td>AFRICA</td>\n",
+       "      <td>#AFRICANBAZE: Breaking news:Nigeria flag set a...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>52</td>\n",
+       "      <td>ablaze</td>\n",
+       "      <td>Philadelphia, PA</td>\n",
+       "      <td>Crying out for more! Set me ablaze</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>53</td>\n",
+       "      <td>ablaze</td>\n",
+       "      <td>London, UK</td>\n",
+       "      <td>On plus side LOOK AT THE SKY LAST NIGHT IT WAS...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    id keyword                       location  \\\n",
+       "31  48  ablaze                     Birmingham   \n",
+       "32  49  ablaze  Est. September 2012 - Bristol   \n",
+       "33  50  ablaze                         AFRICA   \n",
+       "34  52  ablaze               Philadelphia, PA   \n",
+       "35  53  ablaze                     London, UK   \n",
+       "\n",
+       "                                                 text  target  \n",
+       "31  @bbcmtd Wholesale Markets ablaze http://t.co/l...       1  \n",
+       "32  We always try to bring the heavy. #metal #RT h...       0  \n",
+       "33  #AFRICANBAZE: Breaking news:Nigeria flag set a...       1  \n",
+       "34                 Crying out for more! Set me ablaze       0  \n",
+       "35  On plus side LOOK AT THE SKY LAST NIGHT IT WAS...       0  "
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -30,17 +114,182 @@
     "train_df = pd.read_csv(\"train.csv\")\n",
     "test_df = pd.read_csv(\"test.csv\")\n",
     "\n",
+    "train_df = train_df.dropna()\n",
+    "\n",
     "# Preprocessing: fill NaNs and get text and target columns\n",
-    "train_df['text'] = train_df['text'].fillna('')\n",
-    "test_df['text'] = test_df['text'].fillna('')\n",
+    "# train_df['text'] = train_df['text'].fillna('')\n",
+    "# test_df['text'] = test_df['text'].fillna('')\n",
+    "# X = train_df['text']\n",
+    "# y = train_df['target']\n",
+    "train_df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "29ac6e41-3227-45c2-96a3-27fe369b7311",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train_df['keyword'].unique()\n",
+    "# we're going to drop the location and id because I dont really think its necessary\n",
+    "\n",
+    "train_df = train_df.drop(columns=[\"id\", \"location\"])\n",
+    "\n",
+    "# Drop any rows with missing values in the 'text' or 'target' columns\n",
+    "train_df = train_df.dropna(subset=['text', 'target'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "784c6246-5e0e-4bf1-a0b2-30fb56052b18",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "@bbcmtd Wholesale Markets ablaze http://t.co/lHYXEOHY6C\n",
+      "t\n",
+      "@bbcmtd Wholesale Markets ablaze \n",
+      "@bbcmtd Wholesale Markets ablaze http://t.co/lHYXEOHY6C\n",
+      "t\n",
+      "@bbcmtd Wholesale Markets ablaze \n"
+     ]
+    }
+   ],
+   "source": [
+    "# stole this from https://www.kaggle.com/code/kodaifukuda0311/disaster-tweets-classification-with-rnn-and-cnn\n",
+    "# Preprocessing\n",
+    "import re\n",
+    "import string\n",
+    "# Remove URL from the text\n",
+    "def remove_URL(text):\n",
+    "    url = re.compile(r'https?://\\S+|www\\.\\S+')\n",
+    "    return url.sub(r'', text)\n",
+    "\n",
+    "pattern = re.compile(r'https?://(\\S+|www)\\.\\S+')\n",
+    "for t in train_df.text:\n",
+    "    matches = pattern.findall(t)\n",
+    "    for match in matches:\n",
+    "        print(t)\n",
+    "        print(match)\n",
+    "        print(pattern.sub(r'', t))\n",
+    "    if len(matches) > 0:\n",
+    "        break\n",
+    "\n",
+    "#Remove puctuations\n",
+    "def remove_punct(text):\n",
+    "    translator = str.maketrans('', '', string.punctuation) # Create a translation table to delete all punctuation\n",
+    "    return text.translate(translator) # Use this translation table to transform the text by removing punctuation characters\n",
+    "\n",
+    "#pattern = re.compile(r'https?://(\\S+|www)\\.\\S+')\n",
+    "for t in train_df.text:\n",
+    "    matches = pattern.findall(t)\n",
+    "    for match in matches:\n",
+    "        print(t)\n",
+    "        print(match)\n",
+    "        print(pattern.sub(r'', t))\n",
+    "    if len(matches) > 0:\n",
+    "        break\n",
+    "\n",
+    "# Apply the functions\n",
+    "train_df['text'] = train_df.text.map(remove_URL) # map(lambda x : remove_URL(x))\n",
+    "train_df['text'] = train_df.text.map(remove_punct)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "7db63a4c-1803-4f48-9d3e-ab17e9f58b43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#count the number of unique words\n",
+    "\n",
+    "def count_words(sent):\n",
+    "    unique_words = set()\n",
+    "    for s in sent.values:\n",
+    "        for word in s.split():\n",
+    "            unique_words.add(word)\n",
+    "    return len(unique_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "dcfa7408-dfaf-46ce-a447-8cb6fd2985db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17203\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_words = count_words(train_df.text)\n",
+    "print(unique_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "268e1782-077e-495d-b84c-11280a101c78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use 'text' as input (X) and 'target' as output (y)\n",
     "X = train_df['text']\n",
-    "y = train_df['target']"
+    "y = train_df['target']\n",
+    "\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=0)\n",
+    "\n",
+    "X_train = np.array(X_train)\n",
+    "X_val = np.array(X_val)\n",
+    "y_train = np.array(y_train)\n",
+    "y_val = np.array(y_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "d7a0c004-97ba-448b-a267-9018668170fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[' Had a personalinjury accident this summer Read our advice amp see how a solicitor can help OtleyHour'\n",
+      " 'Sometimes logic gets drowned out in emotion but its gotta surface at some point']\n",
+      "[[95, 2, 4485, 112, 18, 395, 161, 102, 4486, 33, 84, 63, 2, 2938, 73, 152, 4487], [1155, 2939, 598, 555, 36, 3, 4488, 26, 42, 1787, 2210, 16, 77, 955]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Tokenize the text\n",
+    "#tokenizer = Tokenizer(num_words=5000, oov_token=\"<OOV>\")\n",
+    "tokenizer = Tokenizer(num_words=unique_words)\n",
+    "tokenizer.fit_on_texts(X_train)\n",
+    "\n",
+    "x_seq = tokenizer.texts_to_sequences(X_train)\n",
+    "val_seq = tokenizer.texts_to_sequences(X_val)\n",
+    "\n",
+    "X_pad = pad_sequences(x_seq, padding='post', maxlen=100)\n",
+    "\n",
+    "\n",
+    "print(X_train[1:3])\n",
+    "print(x_seq[1:3])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29ac6e41-3227-45c2-96a3-27fe369b7311",
+   "id": "e9e177b1-c352-424f-a02b-c1ff8751d1ff",
    "metadata": {},
    "outputs": [],
    "source": []
