Fixing torch model

--- a/NLPSubmission.ipynb
+++ b/NLPSubmission.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 4,
    "id": "9d59dcf4-0dc4-477c-a4d6-afdc29406837",
    "metadata": {},
    "outputs": [
@@ -36,66 +36,66 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>48</td>\n",
-       "      <td>ablaze</td>\n",
-       "      <td>Birmingham</td>\n",
-       "      <td>@bbcmtd Wholesale Markets ablaze http://t.co/l...</td>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Our Deeds are the Reason of this #earthquake M...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>49</td>\n",
-       "      <td>ablaze</td>\n",
-       "      <td>Est. September 2012 - Bristol</td>\n",
-       "      <td>We always try to bring the heavy. #metal #RT h...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>50</td>\n",
-       "      <td>ablaze</td>\n",
-       "      <td>AFRICA</td>\n",
-       "      <td>#AFRICANBAZE: Breaking news:Nigeria flag set a...</td>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Forest fire near La Ronge Sask. Canada</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>52</td>\n",
-       "      <td>ablaze</td>\n",
-       "      <td>Philadelphia, PA</td>\n",
-       "      <td>Crying out for more! Set me ablaze</td>\n",
-       "      <td>0</td>\n",
+       "      <th>2</th>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>All residents asked to 'shelter in place' are ...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>53</td>\n",
-       "      <td>ablaze</td>\n",
-       "      <td>London, UK</td>\n",
-       "      <td>On plus side LOOK AT THE SKY LAST NIGHT IT WAS...</td>\n",
-       "      <td>0</td>\n",
+       "      <th>3</th>\n",
+       "      <td>6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13,000 people receive #wildfires evacuation or...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Just got sent this photo from Ruby #Alaska as ...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    id keyword                       location  \\\n",
-       "31  48  ablaze                     Birmingham   \n",
-       "32  49  ablaze  Est. September 2012 - Bristol   \n",
-       "33  50  ablaze                         AFRICA   \n",
-       "34  52  ablaze               Philadelphia, PA   \n",
-       "35  53  ablaze                     London, UK   \n",
+       "   id keyword location                                               text  \\\n",
+       "0   1     NaN      NaN  Our Deeds are the Reason of this #earthquake M...   \n",
+       "1   4     NaN      NaN             Forest fire near La Ronge Sask. Canada   \n",
+       "2   5     NaN      NaN  All residents asked to 'shelter in place' are ...   \n",
+       "3   6     NaN      NaN  13,000 people receive #wildfires evacuation or...   \n",
+       "4   7     NaN      NaN  Just got sent this photo from Ruby #Alaska as ...   \n",
        "\n",
-       "                                                 text  target  \n",
-       "31  @bbcmtd Wholesale Markets ablaze http://t.co/l...       1  \n",
-       "32  We always try to bring the heavy. #metal #RT h...       0  \n",
-       "33  #AFRICANBAZE: Breaking news:Nigeria flag set a...       1  \n",
-       "34                 Crying out for more! Set me ablaze       0  \n",
-       "35  On plus side LOOK AT THE SKY LAST NIGHT IT WAS...       0  "
+       "   target  \n",
+       "0       1  \n",
+       "1       1  \n",
+       "2       1  \n",
+       "3       1  \n",
+       "4       1  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
     "train_df = pd.read_csv(\"train.csv\")\n",
     "test_df = pd.read_csv(\"test.csv\")\n",
     "\n",
-    "train_df = train_df.dropna()\n",
+    "#train_df = train_df.dropna()\n",
     "\n",
     "# Preprocessing: fill NaNs and get text and target columns\n",
     "# train_df['text'] = train_df['text'].fillna('')\n",
